# browserfriend

./: .gitignore  .pre-commit-config.yaml  PR_DESCRIPTION.md  README.md  RELEASE_v0.2.0.md  RELEASE_v0.6.0.md  VISION_CLI_IMPLEMENTATION.md  main.py  pyproject.toml
.cursor/plans/: browserfriend_implementation_plan_223076c1.plan.md
browserfriend/: cli.py  config.py  database.py
browserfriend/email/: __init__.py  renderer.py  sender.py  utils.py
browserfriend/email/templates/: dashboard_email.html
browserfriend/llm/: __init__.py  analyzer.py  display.py  prompts.py
browserfriend/server/: __init__.py  app.py
browserfriend/templates/: admin.html
docs/: CLI_IMPLEMENTATION.md  FASTAPI_SERVER_IMPLEMENTATION.md
extension/: manifest.json
extension/background/: service-worker.js
extension/popup/: popup.html  popup.js  styles.css
tests/: send_test_email.py  test_api_setup.py  test_api_status.py  test_api_track.py  test_cli.py  test_database.py  test_duration_e2e.py  test_e2e.py  test_email.py  test_email_e2e.py  test_llm.py  test_llm_connection.py  test_steps_1_2_3.py
