[project]
name = "browserfriend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "typer",
    "pydantic",
    "pydantic-settings",
    "google-generativeai",
    "python-dotenv",
    "resend",
    "jinja2",
    "psutil",
    "email-validator",
]

[project.scripts]
bf = "browserfriend.cli:cli_main"

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "black",
    "pre-commit",
    "ruff",
    "isort",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
